Rename all instances of 'fisherman' to 'watcher'
