# utility/types/gov.go
@@ -27,13 +27,13 @@ const (
 	ServicerMaxPauseBlocksParamName     = "servicer_max_pause_blocks"
 	ServicersPerSessionParamName        = "servicers_per_session"
 
-	// Fisherman actor gov params
-	FishermanMinimumStakeParamName       = "fisherman_minimum_stake"
-	FishermanMaxChainsParamName          = "fisherman_max_chains"
-	FishermanUnstakingBlocksParamName    = "fisherman_unstaking_blocks"
-	FishermanMinimumPauseBlocksParamName = "fisherman_minimum_pause_blocks"
-	FishermanMaxPauseBlocksParamName     = "fisherman_max_pause_blocks"
-	FishermanPerSessionParamName         = "fisherman_per_session"
+	// Watcher actor gov params
+	WatcherMinimumStakeParamName       = "watcher_minimum_stake"
+	WatcherMaxChainsParamName          = "watcher_max_chains"
+	WatcherUnstakingBlocksParamName    = "watcher_unstaking_blocks"
+	WatcherMinimumPauseBlocksParamName = "watcher_minimum_pause_blocks"
+	WatcherMaxPauseBlocksParamName     = "watcher_max_pause_blocks"
+	WatcherPerSessionParamName         = "watcher_per_session"
 
 	// Validator actor gov params
 	ValidatorMinimumStakeParamName        = "validator_minimum_stake"
@@ -49,14 +49,14 @@ const (
 	DoubleSignBurnPercentageParamName        = "double_sign_burn_percentage"
 
 	// Pocket specific message gov params
-	MessageStakeFishermanFee         = "message_stake_fisherman_fee"
-	MessageEditStakeFishermanFee     = "message_edit_stake_fisherman_fee"
-	MessageUnstakeFishermanFee       = "message_unstake_fisherman_fee"
-	MessagePauseFishermanFee         = "message_pause_fisherman_fee"
-	MessageUnpauseFishermanFee       = "message_unpause_fisherman_fee"
-	MessageFishermanPauseServicerFee = "message_fisherman_pause_servicer_fee"
-	MessageTestScoreFee              = "message_test_score_fee"
-	MessageProveTestScoreFee         = "message_prove_test_score_fee"
+	MessageStakeWatcherFee         = "message_stake_watcher_fee"
+	MessageEditStakeWatcherFee     = "message_edit_stake_watcher_fee"
+	MessageUnstakeWatcherFee       = "message_unstake_watcher_fee"
+	MessagePauseWatcherFee         = "message_pause_watcher_fee"
+	MessageUnpauseWatcherFee       = "message_unpause_watcher_fee"
+	MessageWatcherPauseServicerFee = "message_watcher_pause_servicer_fee"
+	MessageTestScoreFee            = "message_test_score_fee"
+	MessageProveTestScoreFee       = "message_prove_test_score_fee"
 
 	// Proof-of-stake message gov params
 	MessageDoubleSignFee   = "message_double_sign_fee"
@@ -109,12 +109,12 @@ const (
 	ServicerMaxPausedBlocksOwner    = "servicer_max_paused_blocks_owner"
 	ServicersPerSessionOwner        = "servicers_per_session_owner"
 
-	FishermanMinimumStakeOwner       = "fisherman_minimum_stake_owner"
-	FishermanMaxChainsOwner          = "fisherman_max_chains_owner"
-	FishermanUnstakingBlocksOwner    = "fisherman_unstaking_blocks_owner"
-	FishermanMinimumPauseBlocksOwner = "fisherman_minimum_pause_blocks_owner"
-	FishermanMaxPausedBlocksOwner    = "fisherman_max_paused_blocks_owner"
-	FishermanPerSessionOwner         = "fisherman_per_session_owner"
+	WatcherMinimumStakeOwner       = "watcher_minimum_stake_owner"
+	WatcherMaxChainsOwner          = "watcher_max_chains_owner"
+	WatcherUnstakingBlocksOwner    = "watcher_unstaking_blocks_owner"
+	WatcherMinimumPauseBlocksOwner = "watcher_minimum_pause_blocks_owner"
+	WatcherMaxPausedBlocksOwner    = "watcher_max_paused_blocks_owner"
+	WatcherPerSessionOwner         = "watcher_per_session_owner"
 
 	ValidatorMinimumStakeOwner           = "validator_minimum_stake_owner"
 	ValidatorUnstakingBlocksOwner        = "validator_unstaking_blocks_owner"
@@ -129,29 +129,29 @@ const (
 	MessageDoubleSignFeeOwner       = "message_double_sign_fee_owner"
 	MessageSendFeeOwner             = "message_send_fee_owner"
 
-	MessageStakeFishermanFeeOwner         = "message_stake_fisherman_fee_owner"
-	MessageEditStakeFishermanFeeOwner     = "message_edit_stake_fisherman_fee_owner"
-	MessageUnstakeFishermanFeeOwner       = "message_unstake_fisherman_fee_owner"
-	MessagePauseFishermanFeeOwner         = "message_pause_fisherman_fee_owner"
-	MessageUnpauseFishermanFeeOwner       = "message_unpause_fisherman_fee_owner"
-	MessageFishermanPauseServicerFeeOwner = "message_fisherman_pause_servicer_fee_owner"
-	MessageTestScoreFeeOwner              = "message_test_score_fee_owner"
-	MessageProveTestScoreFeeOwner         = "message_prove_test_score_fee_owner"
-	MessageStakeAppFeeOwner               = "message_stake_app_fee_owner"
-	MessageEditStakeAppFeeOwner           = "message_edit_stake_app_fee_owner"
-	MessageUnstakeAppFeeOwner             = "message_unstake_app_fee_owner"
-	MessagePauseAppFeeOwner               = "message_pause_app_fee_owner"
-	MessageUnpauseAppFeeOwner             = "message_unpause_app_fee_owner"
-	MessageStakeValidatorFeeOwner         = "message_stake_validator_fee_owner"
-	MessageEditStakeValidatorFeeOwner     = "message_edit_stake_validator_fee_owner"
-	MessageUnstakeValidatorFeeOwner       = "message_unstake_validator_fee_owner"
-	MessagePauseValidatorFeeOwner         = "message_pause_validator_fee_owner"
-	MessageUnpauseValidatorFeeOwner       = "message_unpause_validator_fee_owner"
-	MessageStakeServicerFeeOwner          = "message_stake_servicer_fee_owner"
-	MessageEditStakeServicerFeeOwner      = "message_edit_stake_servicer_fee_owner"
-	MessageUnstakeServicerFeeOwner        = "message_unstake_servicer_fee_owner"
-	MessagePauseServicerFeeOwner          = "message_pause_servicer_fee_owner"
-	MessageUnpauseServicerFeeOwner        = "message_unpause_servicer_fee_owner"
+	MessageStakeWatcherFeeOwner         = "message_stake_watcher_fee_owner"
+	MessageEditStakeWatcherFeeOwner     = "message_edit_stake_watcher_fee_owner"
+	MessageUnstakeWatcherFeeOwner       = "message_unstake_watcher_fee_owner"
+	MessagePauseWatcherFeeOwner         = "message_pause_watcher_fee_owner"
+	MessageUnpauseWatcherFeeOwner       = "message_unpause_watcher_fee_owner"
+	MessageWatcherPauseServicerFeeOwner = "message_watcher_pause_servicer_fee_owner"
+	MessageTestScoreFeeOwner            = "message_test_score_fee_owner"
+	MessageProveTestScoreFeeOwner       = "message_prove_test_score_fee_owner"
+	MessageStakeAppFeeOwner             = "message_stake_app_fee_owner"
+	MessageEditStakeAppFeeOwner         = "message_edit_stake_app_fee_owner"
+	MessageUnstakeAppFeeOwner           = "message_unstake_app_fee_owner"
+	MessagePauseAppFeeOwner             = "message_pause_app_fee_owner"
+	MessageUnpauseAppFeeOwner           = "message_unpause_app_fee_owner"
+	MessageStakeValidatorFeeOwner       = "message_stake_validator_fee_owner"
+	MessageEditStakeValidatorFeeOwner   = "message_edit_stake_validator_fee_owner"
+	MessageUnstakeValidatorFeeOwner     = "message_unstake_validator_fee_owner"
+	MessagePauseValidatorFeeOwner       = "message_pause_validator_fee_owner"
+	MessageUnpauseValidatorFeeOwner     = "message_unpause_validator_fee_owner"
+	MessageStakeServicerFeeOwner        = "message_stake_servicer_fee_owner"
+	MessageEditStakeServicerFeeOwner    = "message_edit_stake_servicer_fee_owner"
+	MessageUnstakeServicerFeeOwner      = "message_unstake_servicer_fee_owner"
+	MessagePauseServicerFeeOwner        = "message_pause_servicer_fee_owner"
+	MessageUnpauseServicerFeeOwner      = "message_unpause_servicer_fee_owner"
 
 	MessageChangeParameterFeeOwner = "message_change_parameter_fee_owner"
 )
